--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -17,9 +17,9 @@
         <div class="logo">MYSELF<span>.</span></div>
         <nav>
           <ul class="flex">
-            <li><a href="#about">About</a></li>
-            <li><a href="#project">Portfolio</a></li>
-            <li><a href="#contact">Contact Me</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="project.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
           </ul>
         </nav>
       </header>
